<resources>
    <string name="app_name">SpeakerVerification</string>

    <!-- main activity -->
    <!-- text -->
    <string name="title">End-to-End double check system</string>

    <string name="step1">step one: transfer data over voice call</string>
    <string name="step2">step two: speaker recognition</string>

    <!-- button -->
    <string name="button1">start send data activity</string>
    <string name="button2">start speaker verification</string>


    <!-- data transfer -->
    <string name="settings">Settings</string>

    <string name="stop">stop</string>
    <string name="send">send</string>
    <string name="listen">listen</string>
    <string name="receive">sounds receiving</string>
    <string name="noReceived">No data receiving</string>


    <!-- settings -->
    <string name="general">General</string>
    <string name="edit_start_frequency">Edit start frequency</string>
    <string name="start_frequency">start frequency</string>
    <string name="edit_end_frequency">Edit end frequency</string>
    <string name="end_frequency">End frequency</string>
    <string name="edit_bits_per_tone">Bits per tone</string>
    <string name="bits_per_tone">bits per tone</string>
    <string name="error_correction">Error correction</string>
    <string name="reed_solomon">Reed solomon</string>
    <string name="error_detection_byte_number_edit">Error detection byte number</string>
    <string name="error_detection_byte_number">Error detection byte number</string>

</resources>
